@@ -116,53 +116,74 @@ public class UserRepositoryImpl implements UserRepository {
     @Override
     @Transactional
     public boolean saveUser(UserRegistrationDTO userData) {
-        //Presa del real associato all'applicazione
+        // Presa del real associato all'applicazione
         RealmResource realmResource = keycloak.realm("CaesarRealm");
+        System.out.println("RealmResource ottenuto: " + realmResource.toString());
 
-        //Presa degli utenti presenti sul real
+        // Presa degli utenti presenti sul real
         UsersResource usersResource = realmResource.users();
+        System.out.println("UsersResource ottenuto: " + usersResource.toString());
 
-        //Creazione di un nuovo utente per inserirlo nel realm
+        // Creazione di un nuovo utente per inserirlo nel realm
         UserRepresentation user = new UserRepresentation();
 
-
-        //Assegnazione dei campi base offerti da keycloak
+        // Assegnazione dei campi base offerti da keycloak
         user.setUsername(userData.getUsername());
         user.setFirstName(userData.getFirstName());
         user.setLastName(userData.getLastName());
         user.setEmail(userData.getEmail());
         user.setEnabled(true);
 
-        //Assegnazione e specifica del tipo di crednziali d'accesso
+        System.out.println("Dati dell'utente impostati: ");
+        System.out.println("Username: " + userData.getUsername());
+        System.out.println("FirstName: " + userData.getFirstName());
+        System.out.println("LastName: " + userData.getLastName());
+        System.out.println("Email: " + userData.getEmail());
+
+        // Assegnazione e specifica del tipo di credenziali d'accesso
         CredentialRepresentation credential = new CredentialRepresentation();
         credential.setType(CredentialRepresentation.PASSWORD);
         credential.setValue(userData.getCredentialValue());
         credential.setTemporary(false);
 
-        //Impostazione delle credenziali d'accesso
+        System.out.println("Credenziali dell'utente impostate: ");
+        System.out.println("Tipo: " + CredentialRepresentation.PASSWORD);
+        System.out.println("Valore: " + userData.getCredentialValue());
+
+        // Impostazione delle credenziali d'accesso
         user.setCredentials(Collections.singletonList(credential));
 
-        //Chiamata per la creazione dell'user
+        // Chiamata per la creazione dell'user
         Response response = usersResource.create(user);
+        System.out.println("Risposta dalla creazione dell'utente: " + response.getStatus());
 
-        //Controllo che l'user sia stato inserito
+        // Controllo che l'user sia stato inserito
         if (response.getStatus() == 201) {
-            //Presa dell'id dell'utente mandata come risposta della chiamata
+            // Presa dell'id dell'utente mandata come risposta della chiamata
             String userId = response.getLocation().getPath().replaceAll(".*/([^/]+)$", "$1");
+            System.out.println("ID dell'utente creato: " + userId);
 
             UserResource userResource = usersResource.get(userId);
 
-            //Impostazione del ruolo "basic" al nuovo utente salvato
-            ClientRepresentation clientRepresentation= realmResource.clients().findByClientId("caesar-app").getFirst();
+            // Impostazione del ruolo "basic" al nuovo utente salvato
+            ClientRepresentation clientRepresentation = realmResource.clients().findByClientId("caesar-app").get(0);
+            System.out.println("ClientRepresentation ottenuto: " + clientRepresentation.toString());
+
             ClientResource clientResource = realmResource.clients().get(clientRepresentation.getId());
+            System.out.println("ClientResource ottenuto: " + clientResource.toString());
 
             RoleRepresentation role = clientResource.roles().get("basic").toRepresentation();
+            System.out.println("RoleRepresentation ottenuto: " + role.toString());
+
             userResource.roles().clientLevel(clientRepresentation.getId()).add(Collections.singletonList(role));
+            System.out.println("Ruolo 'basic' assegnato all'utente.");
 
             return true;
         }
+        System.out.println("Creazione dell'utente fallita. Stato della risposta: " + response.getStatus());
         return false;
     }
+
 
     @Override
     @Transactional
